# fecal

./: CMakeLists.txt  FecalCommon.cpp  FecalCommon.h  FecalDecoder.cpp  FecalDecoder.h  FecalEncoder.cpp  FecalEncoder.h  README.md  fecal.cpp  fecal.h
proj/msvc/: Fecal.sln  LibFecal.vcxproj  LibFecal.vcxproj.filters
tests/: benchmark.cpp
tests/msvc/: FecalBenchmark.vcxproj
